--- a/app/views/404.html
+++ b/app/views/404.html
@@ -1,1 +1,3 @@
-{{ titre }}
+<div class="div-404 d-flex justify-content-center align-items-center">
+    <img src="/img/404.jpg" class="img-404" alt="Page non trouvée">
+</div>
