--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,9 +2,9 @@
     <div class="col-md-6">
         <div class="card">
             <h5 class="card-header primary-color white-text text-center py-4">
-                <strong>Connexion</strong>
+                <strong class="text-uppercase">Connexion</strong>
             </h5>
-            <div class="card-body px-lg-5 pt-0">
+            <div class="card-body px-lg-5">
                 <form class="text-center" ng-submit="connexion(identifiant, password)" name="login" novalidate>
                     <div class="md-form">
                         <input type="text" id="identifiantForm" class="form-control" ng-model="identifiant">
@@ -14,8 +14,9 @@
                         <input type="password" id="passwordForm" class="form-control" ng-model="password">
                         <label for="passwordForm">Mot de passe</label>
                     </div>
-                    <p>Vous n’avez pas de compte  ? <a href="#!/register">Inscrivez-vous</a></p>
-                    <button class="btn btn-outline-primary btn-rounded btn-block my-4 waves-effect z-depth-0 w-50 mx-auto" type="submit">Se connecter</button>
+                    <p class="d-none">Vous n’avez pas de compte ? <a href="#!/register">Inscrivez-vous</a></p>
+                    <button class="btn btn-outline-primary btn-block my-4 waves-effect z-depth-0 w-50 mx-auto"
+                        type="submit">Se connecter</button>
                 </form>
             </div>
         </div>
